Improve report metrics